# pytorch_asr_poc

./: README.md  pyproject.toml
pytorch_asr_poc/: asr.py  main.py
